--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -30,9 +30,9 @@
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="TipoEventos" asp-action="Index">Tipo de Eventos</a>          
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Productos" asp-action="Index"><i class="fa-solid fa-list pe-2"></i>Productos</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="TipoProductos" asp-action="Index">Tipo de Productos</a>
+                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Ventas" asp-action="Index"><i class="fa-solid fa-cart-shopping pe-2"></i>Ventas</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Provincias" asp-action="Index"><i class="fas fa-map-marker-alt pe-2"></i>Provincias</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Localidades" asp-action="Index"><i class="fas fa-city pe-2"></i>Localidades</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Ventas" asp-action="Index"><i class="fas fa-city pe-2"></i>Ventas</a>
+                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Localidades" asp-action="Index"><i class="fas fa-city pe-2"></i>Localidades</a>               
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
         </div>
