--- a/ClubSoft/Views/Localidades/Index.cshtml
+++ b/ClubSoft/Views/Localidades/Index.cshtml
@@ -29,7 +29,7 @@
 
 
 <div class="p-3" style="heigth: 100%;">
-  <div class="card">
+  <div class="card shadow-sm">
     <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>LOCALIDADES</h3>
     <div class="card-body mb-5">
       <div class="table-responsive" style="height: 350px; overflow-y: auto;">
