--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,53 +13,94 @@
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ClubSoft.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/fontawesome/css/all.min.css" />
-    
+
 </head>
+
 <body>
-@if (SignInManager.IsSignedIn(User))
-{
-    <div class="d-flex" id="wrapper">
-        <!-- Sidebar-->
-        <div class="bg-white" id="sidebar-wrapper" style="background: linear-gradient(357deg, rgba(0,128,255,1) 0%, rgba(16,39,62,1) 40%, rgba(33,37,41,1) 100%) !important;">
-            <div class="sidebar-heading">
-                <img src="~/img/logonav.png" style="width: 150px;" alt="logo" />
-            </div>
-            <div class="list-group list-group-flush">
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Inicio"><i class="fa-solid fa-house pe-2"></i>Inicio</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Personas" asp-action="Index"><i class="fas fa-users pe-2"></i>Personas</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Eventos" asp-action="Index"><i class="fas fa-calendar-days pe-2"></i>Eventos</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="TipoEventos" asp-action="Index">Tipo de Eventos</a>          
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Productos" asp-action="Index"><i class="fa-solid fa-list pe-2"></i>Productos</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="TipoProductos" asp-action="Index">Tipo de Productos</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Ventas" asp-action="Index"><i class="fa-solid fa-cart-shopping pe-2"></i>Ventas</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Provincias" asp-action="Index"><i class="fas fa-map-marker-alt pe-2"></i>Provincias</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Localidades" asp-action="Index"><i class="fas fa-city pe-2"></i>Localidades</a>               
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </div>
-        </div>
-        <!-- Page content wrapper-->
-        <div id="page-content-wrapper">
-            <!-- Top navigation-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
-                <div class="container-fluid">
-                    <button class="btn" id="sidebarToggle"><i class="fa-solid fa-bars" style="color: white;"></i></button>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                            <partial name="_LoginPartial" />
-                        </ul>
-                    </div>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <div class="d-flex" id="wrapper">
+            <!-- Sidebar-->
+            <div class="bg-white" id="sidebar-wrapper"
+                style="background: linear-gradient(357deg, rgba(0,128,255,1) 0%, rgba(16,39,62,1) 40%, rgba(33,37,41,1) 100%) !important;">
+                <div class="sidebar-heading">
+                    <img src="~/img/logonav.png" style="width: 150px;" alt="logo" />
                 </div>
-            </nav>
-            <!-- Page content-->
-            <div>
-                <main role="main">
-                    @RenderBody()
-                </main>
+                <div class="list-group list-group-flush">
+                    <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home"
+                        asp-action="Inicio"><i class="fa-solid fa-house pe-2"></i>Inicio</a>
+                    <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Personas"
+                        asp-action="Index"><i class="fas fa-users pe-2"></i>Personas</a>
+
+                    <!-- Dropdown para Eventos -->
+                    <div class="list-group-item p-0">
+                        <a class="list-group-item text-light d-flex align-items-center justify-content-between"
+                            data-bs-toggle="collapse" href="#eventosMenu" role="button" aria-expanded="false"
+                            aria-controls="eventosMenu">
+                            <span><i class="fas fa-calendar-days pe-2"></i>Eventos</span>
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </a>
+                        <div class="collapse bg-light mx-2 rounded" id="eventosMenu">
+                            <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="Eventos"
+                                asp-action="Index">Administrar eventos</a>
+                            <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="TipoEventos"
+                                asp-action="Index">Tipos de Eventos</a>
+                        </div>
+                    </div>
+
+                    <!-- Dropdown para Productos -->
+                    <div class="list-group-item p-0">
+                        <a class="list-group-item text-light d-flex align-items-center justify-content-between"
+                            data-bs-toggle="collapse" href="#productosMenu" role="button" aria-expanded="false"
+                            aria-controls="productosMenu">
+                            <span><i class="fa-solid fa-list pe-2"></i>Productos</span>
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </a>
+                        <div class="collapse bg-light mx-2 rounded" id="productosMenu">
+                            <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="Productos"
+                                asp-action="Index">Administrar productos</a>
+                            <a class="list-group-item text-dark menuhover" asp-area="" asp-controller="TipoProductos"
+                                asp-action="Index">Tipos de Productos</a>
+                        </div>
+                    </div>
+
+                    <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Ventas"
+                        asp-action="Index"><i class="fa-solid fa-cart-shopping pe-2"></i>Ventas</a>
+                    <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Provincias"
+                        asp-action="Index"><i class="fas fa-map-marker-alt pe-2"></i>Provincias</a>
+                    <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Localidades"
+                        asp-action="Index"><i class="fas fa-city pe-2"></i>Localidades</a>
+                    <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home"
+                        asp-action="Privacy">Privacy</a>
+                </div>
+            </div>
+            <!-- Page content wrapper-->
+            <div id="page-content-wrapper">
+                <!-- Top navigation-->
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
+                    <div class="container-fluid">
+                        <button class="btn" id="sidebarToggle"><i class="fa-solid fa-bars"
+                                style="color: white;"></i></button>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation"><span
+                                class="navbar-toggler-icon"></span></button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+                                <partial name="_LoginPartial" />
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+                <!-- Page content-->
+                <div>
+                    <main role="main">
+                        @RenderBody()
+                    </main>
+                </div>
             </div>
         </div>
-    </div>
-}
+    }
     <div>
         <main role="main">
             @RenderBody()
@@ -73,4 +115,5 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
