--- a/ClubSoft/Views/TipoProductos/Index.cshtml
+++ b/ClubSoft/Views/TipoProductos/Index.cshtml
@@ -22,7 +22,7 @@
 </div>
 
 <div class="p-3" style="heigth: 100%;">
-  <div class="card">
+  <div class="card shadow-sm">
     <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>TIPOS DE PRODUCTOS</h3>
     <div class="card-body">
       <div class="table-responsive" style="height: 500px; overflow-y: auto;">
