--- a/ClubSoft/Views/Ventas/Index.cshtml
+++ b/ClubSoft/Views/Ventas/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="p-3">
   @*TABLA*@
   <div class="mt-2" style="heigth: 100%;">
-    <div class="card">
+    <div class="card shadow-sm">
       <div class="card-header row m-0 p-2">
         <div class="col-md-6 d-flex align-items-center">
           <button type="button" class="btn boton-color" onclick="NuevaVenta()" data-bs-toggle="modal"
@@ -122,7 +122,6 @@
       </div>
     </div>
   </div>
-
 </div>
 
 
